# linux-case

./: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  run-clang-tidy.py
apps/: CMakeLists.txt
apps/task1/: README.md  main.cpp
apps/task2/: python_task.py
apps/task3/: CMakeLists.txt
apps/task3/lib/: CMakeLists.txt  Udp.cpp  Udp.h
apps/task3/test/: CMakeLists.txt  udp-test.cpp
apps/task3/udp-server/: CMakeLists.txt  main.cpp
